parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOT
    KEYWORD
    LEFT_BRACKET
    RIGHT_BRACKET
    SYMBOL

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement statement_list
Rule 4     statement -> expression SEMICOLON
Rule 5     statement -> function_definition
Rule 6     statement -> if_statement
Rule 7     statement -> code_block
Rule 8     statement -> COMMENT
Rule 9     function_definition -> FUNCTION_KEYWORD IDENTIFIER LEFT_PAREN argument_list RIGHT_PAREN code_block
Rule 10    argument_list -> IDENTIFIER
Rule 11    argument_list -> IDENTIFIER COMMA argument_list
Rule 12    argument_list -> empty
Rule 13    if_statement -> CONTROL_KEYWORD expression code_block
Rule 14    if_statement -> CONTROL_KEYWORD expression code_block else_statement
Rule 15    else_statement -> CONTROL_KEYWORD code_block
Rule 16    else_statement -> empty
Rule 17    empty -> <empty>
Rule 18    code_block -> LEFT_BRACE statement_list RIGHT_BRACE
Rule 19    expression -> IDENTIFIER
Rule 20    expression -> INTEGER
Rule 21    expression -> STRING
Rule 22    expression -> expression PLUS expression
Rule 23    expression -> expression MINUS expression
Rule 24    expression -> expression MULTIPLY expression
Rule 25    expression -> expression DIVIDE expression
Rule 26    expression -> expression EQUALS expression
Rule 27    expression -> expression NOT_EQUALS expression
Rule 28    expression -> expression LESS_THAN expression
Rule 29    expression -> expression GREATER_THAN expression
Rule 30    expression -> expression LESS_THAN_OR_EQUAL expression
Rule 31    expression -> expression GREATER_THAN_OR_EQUAL expression
Rule 32    expression -> expression AND expression
Rule 33    expression -> expression OR expression
Rule 34    expression -> NOT expression
Rule 35    expression -> IDENTIFIER ASSIGN expression
Rule 36    expression -> LEFT_PAREN expression RIGHT_PAREN

Terminals, with rules where they appear

AND                  : 32
ASSIGN               : 35
COMMA                : 11
COMMENT              : 8
CONTROL_KEYWORD      : 13 14 15
DIVIDE               : 25
DOT                  : 
EQUALS               : 26
FUNCTION_KEYWORD     : 9
GREATER_THAN         : 29
GREATER_THAN_OR_EQUAL : 31
IDENTIFIER           : 9 10 11 19 35
INTEGER              : 20
KEYWORD              : 
LEFT_BRACE           : 18
LEFT_BRACKET         : 
LEFT_PAREN           : 9 36
LESS_THAN            : 28
LESS_THAN_OR_EQUAL   : 30
MINUS                : 23
MULTIPLY             : 24
NOT                  : 34
NOT_EQUALS           : 27
OR                   : 33
PLUS                 : 22
RIGHT_BRACE          : 18
RIGHT_BRACKET        : 
RIGHT_PAREN          : 9 36
SEMICOLON            : 4
STRING               : 21
SYMBOL               : 
error                : 

Nonterminals, with rules where they appear

argument_list        : 9 11
code_block           : 7 9 13 14 15
else_statement       : 14
empty                : 12 16
expression           : 4 13 14 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 35 36
function_definition  : 5
if_statement         : 6
program              : 0
statement            : 2 3
statement_list       : 1 3 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement statement_list
    (4) statement -> . expression SEMICOLON
    (5) statement -> . function_definition
    (6) statement -> . if_statement
    (7) statement -> . code_block
    (8) statement -> . COMMENT
    (19) expression -> . IDENTIFIER
    (20) expression -> . INTEGER
    (21) expression -> . STRING
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression MULTIPLY expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . expression EQUALS expression
    (27) expression -> . expression NOT_EQUALS expression
    (28) expression -> . expression LESS_THAN expression
    (29) expression -> . expression GREATER_THAN expression
    (30) expression -> . expression LESS_THAN_OR_EQUAL expression
    (31) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (32) expression -> . expression AND expression
    (33) expression -> . expression OR expression
    (34) expression -> . NOT expression
    (35) expression -> . IDENTIFIER ASSIGN expression
    (36) expression -> . LEFT_PAREN expression RIGHT_PAREN
    (9) function_definition -> . FUNCTION_KEYWORD IDENTIFIER LEFT_PAREN argument_list RIGHT_PAREN code_block
    (13) if_statement -> . CONTROL_KEYWORD expression code_block
    (14) if_statement -> . CONTROL_KEYWORD expression code_block else_statement
    (18) code_block -> . LEFT_BRACE statement_list RIGHT_BRACE

    COMMENT         shift and go to state 8
    IDENTIFIER      shift and go to state 9
    INTEGER         shift and go to state 10
    STRING          shift and go to state 11
    NOT             shift and go to state 12
    LEFT_PAREN      shift and go to state 13
    FUNCTION_KEYWORD shift and go to state 14
    CONTROL_KEYWORD shift and go to state 15
    LEFT_BRACE      shift and go to state 16

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 4
    function_definition            shift and go to state 5
    if_statement                   shift and go to state 6
    code_block                     shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .

    $end            reduce using rule 1 (program -> statement_list .)


state 3

    (2) statement_list -> statement .
    (3) statement_list -> statement . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement statement_list
    (4) statement -> . expression SEMICOLON
    (5) statement -> . function_definition
    (6) statement -> . if_statement
    (7) statement -> . code_block
    (8) statement -> . COMMENT
    (19) expression -> . IDENTIFIER
    (20) expression -> . INTEGER
    (21) expression -> . STRING
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression MULTIPLY expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . expression EQUALS expression
    (27) expression -> . expression NOT_EQUALS expression
    (28) expression -> . expression LESS_THAN expression
    (29) expression -> . expression GREATER_THAN expression
    (30) expression -> . expression LESS_THAN_OR_EQUAL expression
    (31) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (32) expression -> . expression AND expression
    (33) expression -> . expression OR expression
    (34) expression -> . NOT expression
    (35) expression -> . IDENTIFIER ASSIGN expression
    (36) expression -> . LEFT_PAREN expression RIGHT_PAREN
    (9) function_definition -> . FUNCTION_KEYWORD IDENTIFIER LEFT_PAREN argument_list RIGHT_PAREN code_block
    (13) if_statement -> . CONTROL_KEYWORD expression code_block
    (14) if_statement -> . CONTROL_KEYWORD expression code_block else_statement
    (18) code_block -> . LEFT_BRACE statement_list RIGHT_BRACE

    $end            reduce using rule 2 (statement_list -> statement .)
    RIGHT_BRACE     reduce using rule 2 (statement_list -> statement .)
    COMMENT         shift and go to state 8
    IDENTIFIER      shift and go to state 9
    INTEGER         shift and go to state 10
    STRING          shift and go to state 11
    NOT             shift and go to state 12
    LEFT_PAREN      shift and go to state 13
    FUNCTION_KEYWORD shift and go to state 14
    CONTROL_KEYWORD shift and go to state 15
    LEFT_BRACE      shift and go to state 16

    statement                      shift and go to state 3
    statement_list                 shift and go to state 17
    expression                     shift and go to state 4
    function_definition            shift and go to state 5
    if_statement                   shift and go to state 6
    code_block                     shift and go to state 7

state 4

    (4) statement -> expression . SEMICOLON
    (22) expression -> expression . PLUS expression
    (23) expression -> expression . MINUS expression
    (24) expression -> expression . MULTIPLY expression
    (25) expression -> expression . DIVIDE expression
    (26) expression -> expression . EQUALS expression
    (27) expression -> expression . NOT_EQUALS expression
    (28) expression -> expression . LESS_THAN expression
    (29) expression -> expression . GREATER_THAN expression
    (30) expression -> expression . LESS_THAN_OR_EQUAL expression
    (31) expression -> expression . GREATER_THAN_OR_EQUAL expression
    (32) expression -> expression . AND expression
    (33) expression -> expression . OR expression

    SEMICOLON       shift and go to state 18
    PLUS            shift and go to state 19
    MINUS           shift and go to state 20
    MULTIPLY        shift and go to state 21
    DIVIDE          shift and go to state 22
    EQUALS          shift and go to state 23
    NOT_EQUALS      shift and go to state 24
    LESS_THAN       shift and go to state 25
    GREATER_THAN    shift and go to state 26
    LESS_THAN_OR_EQUAL shift and go to state 27
    GREATER_THAN_OR_EQUAL shift and go to state 28
    AND             shift and go to state 29
    OR              shift and go to state 30


state 5

    (5) statement -> function_definition .

    COMMENT         reduce using rule 5 (statement -> function_definition .)
    IDENTIFIER      reduce using rule 5 (statement -> function_definition .)
    INTEGER         reduce using rule 5 (statement -> function_definition .)
    STRING          reduce using rule 5 (statement -> function_definition .)
    NOT             reduce using rule 5 (statement -> function_definition .)
    LEFT_PAREN      reduce using rule 5 (statement -> function_definition .)
    FUNCTION_KEYWORD reduce using rule 5 (statement -> function_definition .)
    CONTROL_KEYWORD reduce using rule 5 (statement -> function_definition .)
    LEFT_BRACE      reduce using rule 5 (statement -> function_definition .)
    $end            reduce using rule 5 (statement -> function_definition .)
    RIGHT_BRACE     reduce using rule 5 (statement -> function_definition .)


state 6

    (6) statement -> if_statement .

    COMMENT         reduce using rule 6 (statement -> if_statement .)
    IDENTIFIER      reduce using rule 6 (statement -> if_statement .)
    INTEGER         reduce using rule 6 (statement -> if_statement .)
    STRING          reduce using rule 6 (statement -> if_statement .)
    NOT             reduce using rule 6 (statement -> if_statement .)
    LEFT_PAREN      reduce using rule 6 (statement -> if_statement .)
    FUNCTION_KEYWORD reduce using rule 6 (statement -> if_statement .)
    CONTROL_KEYWORD reduce using rule 6 (statement -> if_statement .)
    LEFT_BRACE      reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    RIGHT_BRACE     reduce using rule 6 (statement -> if_statement .)


state 7

    (7) statement -> code_block .

    COMMENT         reduce using rule 7 (statement -> code_block .)
    IDENTIFIER      reduce using rule 7 (statement -> code_block .)
    INTEGER         reduce using rule 7 (statement -> code_block .)
    STRING          reduce using rule 7 (statement -> code_block .)
    NOT             reduce using rule 7 (statement -> code_block .)
    LEFT_PAREN      reduce using rule 7 (statement -> code_block .)
    FUNCTION_KEYWORD reduce using rule 7 (statement -> code_block .)
    CONTROL_KEYWORD reduce using rule 7 (statement -> code_block .)
    LEFT_BRACE      reduce using rule 7 (statement -> code_block .)
    $end            reduce using rule 7 (statement -> code_block .)
    RIGHT_BRACE     reduce using rule 7 (statement -> code_block .)


state 8

    (8) statement -> COMMENT .

    COMMENT         reduce using rule 8 (statement -> COMMENT .)
    IDENTIFIER      reduce using rule 8 (statement -> COMMENT .)
    INTEGER         reduce using rule 8 (statement -> COMMENT .)
    STRING          reduce using rule 8 (statement -> COMMENT .)
    NOT             reduce using rule 8 (statement -> COMMENT .)
    LEFT_PAREN      reduce using rule 8 (statement -> COMMENT .)
    FUNCTION_KEYWORD reduce using rule 8 (statement -> COMMENT .)
    CONTROL_KEYWORD reduce using rule 8 (statement -> COMMENT .)
    LEFT_BRACE      reduce using rule 8 (statement -> COMMENT .)
    $end            reduce using rule 8 (statement -> COMMENT .)
    RIGHT_BRACE     reduce using rule 8 (statement -> COMMENT .)


state 9

    (19) expression -> IDENTIFIER .
    (35) expression -> IDENTIFIER . ASSIGN expression

    SEMICOLON       reduce using rule 19 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 19 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 19 (expression -> IDENTIFIER .)
    MULTIPLY        reduce using rule 19 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 19 (expression -> IDENTIFIER .)
    EQUALS          reduce using rule 19 (expression -> IDENTIFIER .)
    NOT_EQUALS      reduce using rule 19 (expression -> IDENTIFIER .)
    LESS_THAN       reduce using rule 19 (expression -> IDENTIFIER .)
    GREATER_THAN    reduce using rule 19 (expression -> IDENTIFIER .)
    LESS_THAN_OR_EQUAL reduce using rule 19 (expression -> IDENTIFIER .)
    GREATER_THAN_OR_EQUAL reduce using rule 19 (expression -> IDENTIFIER .)
    AND             reduce using rule 19 (expression -> IDENTIFIER .)
    OR              reduce using rule 19 (expression -> IDENTIFIER .)
    RIGHT_PAREN     reduce using rule 19 (expression -> IDENTIFIER .)
    LEFT_BRACE      reduce using rule 19 (expression -> IDENTIFIER .)
    ASSIGN          shift and go to state 31


state 10

    (20) expression -> INTEGER .

    SEMICOLON       reduce using rule 20 (expression -> INTEGER .)
    PLUS            reduce using rule 20 (expression -> INTEGER .)
    MINUS           reduce using rule 20 (expression -> INTEGER .)
    MULTIPLY        reduce using rule 20 (expression -> INTEGER .)
    DIVIDE          reduce using rule 20 (expression -> INTEGER .)
    EQUALS          reduce using rule 20 (expression -> INTEGER .)
    NOT_EQUALS      reduce using rule 20 (expression -> INTEGER .)
    LESS_THAN       reduce using rule 20 (expression -> INTEGER .)
    GREATER_THAN    reduce using rule 20 (expression -> INTEGER .)
    LESS_THAN_OR_EQUAL reduce using rule 20 (expression -> INTEGER .)
    GREATER_THAN_OR_EQUAL reduce using rule 20 (expression -> INTEGER .)
    AND             reduce using rule 20 (expression -> INTEGER .)
    OR              reduce using rule 20 (expression -> INTEGER .)
    RIGHT_PAREN     reduce using rule 20 (expression -> INTEGER .)
    LEFT_BRACE      reduce using rule 20 (expression -> INTEGER .)


state 11

    (21) expression -> STRING .

    SEMICOLON       reduce using rule 21 (expression -> STRING .)
    PLUS            reduce using rule 21 (expression -> STRING .)
    MINUS           reduce using rule 21 (expression -> STRING .)
    MULTIPLY        reduce using rule 21 (expression -> STRING .)
    DIVIDE          reduce using rule 21 (expression -> STRING .)
    EQUALS          reduce using rule 21 (expression -> STRING .)
    NOT_EQUALS      reduce using rule 21 (expression -> STRING .)
    LESS_THAN       reduce using rule 21 (expression -> STRING .)
    GREATER_THAN    reduce using rule 21 (expression -> STRING .)
    LESS_THAN_OR_EQUAL reduce using rule 21 (expression -> STRING .)
    GREATER_THAN_OR_EQUAL reduce using rule 21 (expression -> STRING .)
    AND             reduce using rule 21 (expression -> STRING .)
    OR              reduce using rule 21 (expression -> STRING .)
    RIGHT_PAREN     reduce using rule 21 (expression -> STRING .)
    LEFT_BRACE      reduce using rule 21 (expression -> STRING .)


state 12

    (34) expression -> NOT . expression
    (19) expression -> . IDENTIFIER
    (20) expression -> . INTEGER
    (21) expression -> . STRING
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression MULTIPLY expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . expression EQUALS expression
    (27) expression -> . expression NOT_EQUALS expression
    (28) expression -> . expression LESS_THAN expression
    (29) expression -> . expression GREATER_THAN expression
    (30) expression -> . expression LESS_THAN_OR_EQUAL expression
    (31) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (32) expression -> . expression AND expression
    (33) expression -> . expression OR expression
    (34) expression -> . NOT expression
    (35) expression -> . IDENTIFIER ASSIGN expression
    (36) expression -> . LEFT_PAREN expression RIGHT_PAREN

    IDENTIFIER      shift and go to state 9
    INTEGER         shift and go to state 10
    STRING          shift and go to state 11
    NOT             shift and go to state 12
    LEFT_PAREN      shift and go to state 13

    expression                     shift and go to state 32

state 13

    (36) expression -> LEFT_PAREN . expression RIGHT_PAREN
    (19) expression -> . IDENTIFIER
    (20) expression -> . INTEGER
    (21) expression -> . STRING
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression MULTIPLY expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . expression EQUALS expression
    (27) expression -> . expression NOT_EQUALS expression
    (28) expression -> . expression LESS_THAN expression
    (29) expression -> . expression GREATER_THAN expression
    (30) expression -> . expression LESS_THAN_OR_EQUAL expression
    (31) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (32) expression -> . expression AND expression
    (33) expression -> . expression OR expression
    (34) expression -> . NOT expression
    (35) expression -> . IDENTIFIER ASSIGN expression
    (36) expression -> . LEFT_PAREN expression RIGHT_PAREN

    IDENTIFIER      shift and go to state 9
    INTEGER         shift and go to state 10
    STRING          shift and go to state 11
    NOT             shift and go to state 12
    LEFT_PAREN      shift and go to state 13

    expression                     shift and go to state 33

state 14

    (9) function_definition -> FUNCTION_KEYWORD . IDENTIFIER LEFT_PAREN argument_list RIGHT_PAREN code_block

    IDENTIFIER      shift and go to state 34


state 15

    (13) if_statement -> CONTROL_KEYWORD . expression code_block
    (14) if_statement -> CONTROL_KEYWORD . expression code_block else_statement
    (19) expression -> . IDENTIFIER
    (20) expression -> . INTEGER
    (21) expression -> . STRING
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression MULTIPLY expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . expression EQUALS expression
    (27) expression -> . expression NOT_EQUALS expression
    (28) expression -> . expression LESS_THAN expression
    (29) expression -> . expression GREATER_THAN expression
    (30) expression -> . expression LESS_THAN_OR_EQUAL expression
    (31) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (32) expression -> . expression AND expression
    (33) expression -> . expression OR expression
    (34) expression -> . NOT expression
    (35) expression -> . IDENTIFIER ASSIGN expression
    (36) expression -> . LEFT_PAREN expression RIGHT_PAREN

    IDENTIFIER      shift and go to state 9
    INTEGER         shift and go to state 10
    STRING          shift and go to state 11
    NOT             shift and go to state 12
    LEFT_PAREN      shift and go to state 13

    expression                     shift and go to state 35

state 16

    (18) code_block -> LEFT_BRACE . statement_list RIGHT_BRACE
    (2) statement_list -> . statement
    (3) statement_list -> . statement statement_list
    (4) statement -> . expression SEMICOLON
    (5) statement -> . function_definition
    (6) statement -> . if_statement
    (7) statement -> . code_block
    (8) statement -> . COMMENT
    (19) expression -> . IDENTIFIER
    (20) expression -> . INTEGER
    (21) expression -> . STRING
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression MULTIPLY expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . expression EQUALS expression
    (27) expression -> . expression NOT_EQUALS expression
    (28) expression -> . expression LESS_THAN expression
    (29) expression -> . expression GREATER_THAN expression
    (30) expression -> . expression LESS_THAN_OR_EQUAL expression
    (31) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (32) expression -> . expression AND expression
    (33) expression -> . expression OR expression
    (34) expression -> . NOT expression
    (35) expression -> . IDENTIFIER ASSIGN expression
    (36) expression -> . LEFT_PAREN expression RIGHT_PAREN
    (9) function_definition -> . FUNCTION_KEYWORD IDENTIFIER LEFT_PAREN argument_list RIGHT_PAREN code_block
    (13) if_statement -> . CONTROL_KEYWORD expression code_block
    (14) if_statement -> . CONTROL_KEYWORD expression code_block else_statement
    (18) code_block -> . LEFT_BRACE statement_list RIGHT_BRACE

    COMMENT         shift and go to state 8
    IDENTIFIER      shift and go to state 9
    INTEGER         shift and go to state 10
    STRING          shift and go to state 11
    NOT             shift and go to state 12
    LEFT_PAREN      shift and go to state 13
    FUNCTION_KEYWORD shift and go to state 14
    CONTROL_KEYWORD shift and go to state 15
    LEFT_BRACE      shift and go to state 16

    statement_list                 shift and go to state 36
    statement                      shift and go to state 3
    expression                     shift and go to state 4
    function_definition            shift and go to state 5
    if_statement                   shift and go to state 6
    code_block                     shift and go to state 7

state 17

    (3) statement_list -> statement statement_list .

    $end            reduce using rule 3 (statement_list -> statement statement_list .)
    RIGHT_BRACE     reduce using rule 3 (statement_list -> statement statement_list .)


state 18

    (4) statement -> expression SEMICOLON .

    COMMENT         reduce using rule 4 (statement -> expression SEMICOLON .)
    IDENTIFIER      reduce using rule 4 (statement -> expression SEMICOLON .)
    INTEGER         reduce using rule 4 (statement -> expression SEMICOLON .)
    STRING          reduce using rule 4 (statement -> expression SEMICOLON .)
    NOT             reduce using rule 4 (statement -> expression SEMICOLON .)
    LEFT_PAREN      reduce using rule 4 (statement -> expression SEMICOLON .)
    FUNCTION_KEYWORD reduce using rule 4 (statement -> expression SEMICOLON .)
    CONTROL_KEYWORD reduce using rule 4 (statement -> expression SEMICOLON .)
    LEFT_BRACE      reduce using rule 4 (statement -> expression SEMICOLON .)
    $end            reduce using rule 4 (statement -> expression SEMICOLON .)
    RIGHT_BRACE     reduce using rule 4 (statement -> expression SEMICOLON .)


state 19

    (22) expression -> expression PLUS . expression
    (19) expression -> . IDENTIFIER
    (20) expression -> . INTEGER
    (21) expression -> . STRING
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression MULTIPLY expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . expression EQUALS expression
    (27) expression -> . expression NOT_EQUALS expression
    (28) expression -> . expression LESS_THAN expression
    (29) expression -> . expression GREATER_THAN expression
    (30) expression -> . expression LESS_THAN_OR_EQUAL expression
    (31) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (32) expression -> . expression AND expression
    (33) expression -> . expression OR expression
    (34) expression -> . NOT expression
    (35) expression -> . IDENTIFIER ASSIGN expression
    (36) expression -> . LEFT_PAREN expression RIGHT_PAREN

    IDENTIFIER      shift and go to state 9
    INTEGER         shift and go to state 10
    STRING          shift and go to state 11
    NOT             shift and go to state 12
    LEFT_PAREN      shift and go to state 13

    expression                     shift and go to state 37

state 20

    (23) expression -> expression MINUS . expression
    (19) expression -> . IDENTIFIER
    (20) expression -> . INTEGER
    (21) expression -> . STRING
    (22) expression -> . expression PLUS expression
    (23) expression -> . expression MINUS expression
    (24) expression -> . expression MULTIPLY expression
    (25) expression -> . expression DIVIDE expression
    (26) expression -> . expression EQUALS expression
    (27) expression -> . expression NOT_EQUALS expression
    (28) expression -> . expression LESS_THAN expression
    (29) expression -> . expression GREATER_THAN expression
    (30) expression -> . expression LESS_THAN_OR_EQUAL expression
    (31) expression -> . expression GREATER_THAN_OR_EQUAL expression
    (32) expression -> . expression AND expression
    (33) expression -> . expression OR expression
    (34) expression -> . NOT expression
    (35) expression -> . IDENTIFIER ASSIGN expression
    (36) expression -> . LEFT_PAREN expression RIGHT_PAREN

    IDENTIFIER      shift and go to state 9
    INTEGER         shift and go to state 10
    STRING          shift and go to state 11
    NOT             shift and go to state 12
    LEFT_PAREN      shift and go to state 13

    expression                     shift and go to state 38

state 21
